--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   <link rel="stylesheet" href="./resources/css/reset.css">
+  <title>Fantomatics</title>
 </head>
 <body>
   <!-- Header -->
@@ -16,7 +17,7 @@
         <ul>
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
-          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
+          <li><a href="https://www.instagram.com/" target="blank">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
         </ul>
       </nav>
       <nav class="mobile">
@@ -56,7 +57,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-1.png" />
+            <img src="./resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -67,7 +68,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="./resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -85,21 +86,21 @@
       </div>
       <div class="images-container">
         <div class="image-container">
-          <img src="./resources/images/filter-1.png" />
+          <img src="./resources/images/filter-1.png"/>
         </div>
         <div class="image-container">
-          <img src="./resources/images/filter-2.png" />
+          <img src="./resources/images/filter-2.png"/>
         </div>
         <div class="image-container">
-          <img src="./resources/images/filter-3.png" />
+          <img src="./resources/images/filter-3.png"/>
         </div>
         <div class="image-container extra">
-          <img src="./resources/images/filter-4.png" />
+          <img src="./resources/images/filter-4.png"/>
         </div>
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
