--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="index.html" class="desktop logo">Fotomatic</a>
       <nav class="desktop">
         <ul>
-          <li><a href="#">Product detail</a></li>
+          <li><a href="#features-section">Product detail</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="https://www.instagram.com/" target="blank">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
         </ul>
